--- a/style.css
+++ b/style.css
@@ -20,7 +20,9 @@ body {
   --background: #fff;
   --font: #000;
   --font-secondary: rgb(131, 131, 131);
-  --theme-icon: #fff;
+  --theme-icon: rgba(0, 0, 0, 0.27);
+  --play-icon: #fff;
+  --playlist-shadow: rgba(0, 0, 0, 0.9);
 }
 
 html {
@@ -53,10 +55,7 @@ html {
   right: -0.5rem;
   font-size: 2.6rem;
   color: var(--font-secondary);
-  background-color: var(--theme-icon);
-  border-radius: 60px;
-  box-shadow: 0 0.2rem 3rem 0.2rem rgba(0, 0, 0, 0.2);
-  padding: 0.3em 0.3em;
+  text-shadow: 0 0 15px var(--theme-icon);
 }
 
 .music_container {
@@ -94,12 +93,12 @@ html {
   margin: auto;
 }
 
-img {
+.img_container > img {
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  object-fit: cover;
   box-shadow: 0 1.2rem 3rem 0.5rem rgba(0, 0, 0, 0.4);
+  object-fit: cover;
 }
 
 .music_controls {
@@ -135,7 +134,7 @@ img {
 }
 
 .music_controls #play:hover {
-  background-color: (var(--background));
+  background-color: var(--play-icon);
   color: var(--font);
   box-shadow: 0 1rem 2rem 0.2rem rgba(0, 0, 0, 0.4);
 }
@@ -199,13 +198,57 @@ img {
   appearance: none;
 }
 
+.playlist-container {
+  overflow: hidden;
+}
+
 .playlist {
   height: 9rem;
   width: auto;
-  border-bottom: 1px solid rgb(185, 185, 185);
   padding: 2rem;
   background-color: var(--background);
+  color: var(--font);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border-bottom: 1px solid grey;
 }
+
+.playlist:hover {
+  cursor: pointer;
+  box-shadow: inset 0px -40px 80px -75px var(--playlist-shadow);
+}
+
+.playlist_img {
+  width: 5rem;
+  height: 5rem;
+  box-shadow: 0px 5px 7px -2px rgba(50, 50, 50, 0.78);
+}
+
+#playlist_title {
+  font-size: 1.5rem;
+}
+
+#playlist_artist {
+  font-size: 1.2rem;
+}
+
+#playlist_duration {
+  font-size: 1.3rem;
+  color: rgb(133, 133, 133);
+}
+
+.music {
+  display: flex;
+  flex-direction: row;
+}
+
+.music_info {
+  display: flex;
+  flex-direction: column;
+  margin: 0 0 0 1.5rem;
+}
+
 @media only screen and (max-width: 500px) {
   .music_container {
     width: 100vw;
