--- a/style.css
+++ b/style.css
@@ -63,6 +63,17 @@ html {
   height: 65rem;
   background-color: var(--background);
   box-shadow: 0 1.2rem 3rem 0.5rem rgba(0, 0, 0, 0.2);
+  overflow-y: scroll;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
+}
+
+.disable-scrollbars {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
 }
 
 .player {
@@ -196,10 +207,6 @@ html {
   transition: width 0.3s linear;
   cursor: pointer;
   appearance: none;
-}
-
-.playlist-container {
-  overflow: hidden;
 }
 
 .playlist {
