--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
   --theme-icon: rgba(0, 0, 0, 0.27);
   --play-icon: #fff;
   --playlist-shadow: rgba(0, 0, 0, 0.9);
+  --border: rgba(206, 206, 206, 0.9);
 }
 
 html {
@@ -35,6 +36,7 @@ html {
   height: 100vh;
   display: grid;
   place-items: center;
+  background-color: var(--background);
 }
 
 .top-section {
@@ -218,7 +220,7 @@ html {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  border-bottom: 1px solid grey;
+  border-bottom: 1px solid var(--border);
 }
 
 .playlist:hover {
