--- a/style.css
+++ b/style.css
@@ -192,7 +192,7 @@ html {
 }
 
 .progressbar_color_light {
-  box-shadow: 0px 2px 20px 0.2px rgba(0, 0, 0, 0.65);
+  background-color: rgb(194, 194, 194);
 }
 
 .progressbar_color_dark {
